[Carousel] Fixed scrollbars in landscape

--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,10 @@
 }
 
 #carousel-container {
-    width: 100vw;
     height: 100vh;
 }
 
 #carousel-container.padding-vertical {
+    height: 80vh;
     padding: 10vh 0;
 }
